--- a/public/css/style_question.css
+++ b/public/css/style_question.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     margin-top: 20px;
     width: 80%;
-    height: 800px;
+    height: 690px;
     margin-left: 13%;
     background-color: white;
 }
@@ -63,6 +63,7 @@ body{
     background-color: white;
     width: 100%;
     height: 440px;
+    margin-top: -100px;
 }
 .a21{
     display: flex;
@@ -73,6 +74,7 @@ body{
     border-radius: 10px;
     margin-top: -32px;
 }
+
 button{
     width: 84%;
     height:40px;
@@ -92,7 +94,7 @@ button:active {
 form{
     width: 50%;
     border: 3px solid #775AB7;
-    margin-top: -105px;
+    margin-top: -15px;
     margin-left: 21.5%;
     border-radius: 20px;
 
@@ -128,4 +130,18 @@ label{
 }
 li{
     font-size: 20px;
+}
+
+.but2{
+    width: 18%;
+    height:20px;
+    border: 2px solid black;
+    font-size: 15px;
+    color:white;
+    background-color:#775AB7 ;
+    padding: 7px;
+}
+.but1{
+    margin-top: 10px;
+    padding: 3px;
 }
