--- a/public/css/style_question.css
+++ b/public/css/style_question.css
@@ -133,15 +133,30 @@ li{
 }
 
 .but2{
-    width: 18%;
-    height:20px;
+    
+    font-family: roboto;
+    text-align: center;
+    width: 15%;
+    height:15px;
     border: 2px solid black;
     font-size: 15px;
-    color:white;
     background-color:#775AB7 ;
-    padding: 7px;
+    padding: 5px;
+}
+.but3{
+    font-family: roboto;
+    text-align: center;
+    width: 15%;
+    height:15px;
+    border: 2px solid black;
+    font-size: 15px;
+    background-color:#775AB7 ;
+    padding: 5px;
+    margin-left: 10px;
 }
 .but1{
     margin-top: 10px;
-    padding: 3px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5px;
 }
