--- a/public/css/style_créer.css
+++ b/public/css/style_créer.css
@@ -96,7 +96,13 @@ button:active {
     margin-top:1%;
     border-radius: 10px 5px;
 }
-
+.taille22{
+    width: 45%;
+    height: 30px;
+    background-color: #D9D9D9;
+    box-shadow: 3px 3px 3px #775AB7;
+    border-radius: 5px 5px;
+}
 .TAILLE {
     width: 40px;
     height: 30px;
