--- a/public/css/style_créer.css
+++ b/public/css/style_créer.css
@@ -99,6 +99,7 @@ button:active {
 .taille22{
     width: 45%;
     height: 30px;
+    margin: 3px;
     background-color: #D9D9D9;
     box-shadow: 3px 3px 3px #775AB7;
     border-radius: 5px 5px;
